[package]
name = "pomocli"
description = "A simple, clean pomodoro timer for developers"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0"
authors = ["Trey Smith"]
repository = "https://github.com/tr3ysmith/pomocli"
homepage = "https://github.com/tr3ysmith/pomocli"
keywords = ["pomodoro", "timer", "productivity", "cli", "terminal"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
crossterm = "0.27"
indicatif = "0.17"
tokio = { version = "1.0", features = ["full"] }
colored = "2.0"
anyhow = "1.0"
rodio = "0.17"
tray-icon = "0.14"
winit = "0.29"
